--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/yellowcoffeemughearts.ico">
+  <meta name="description" content="Mechanical Engineering Undergrad @UCRiverside">
+  <meta name="author" content="862125494">
 
-  <title>John Doe - Business Administration</title>
+  <title>Zurisaddai Verdin - Mechanical Engineering</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Zurisaddai Verdin</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Zurisaddai-Verdin.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Zurisaddai Verdin
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Mechanical Engineering📚</div>
+        <p class="lead mb-4">My interest in engineering began at a young age with a curiosity about how the world and everything in it works.<br><br>
 
-        Enter bio here<br><br>
+        My curiosity and natural talent for problem-solving have led me to excel in my studies and achieve impressive academic results. <br><br>
 
-        Enter bio here
+        I enjoy music, the company of my family, and exploring new places when I'm not busy with school or extracurricular activities.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/in/zurisaddai-verdin">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/Zurisaddai-Verdin">
             <i class="fab fa-github"></i>
           </a>
           <a target="_blank" id="socialicon-3" href="https://twitter.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:zverdin20@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,50 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Assistant Project Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.stonebridgesteelerection.com/">Stonebridge Steel Erectors Inc.</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Managed day to day operations including budgeting<br> 
+              • Improved document control including structural blueprints<br>
+              • Monitored stress ans strain testing done on material to ensure quality of materials purchased<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">May 2020 - September 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Mechanical Engineering Courses</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.me.ucr.edu/">UCR Department of Mechanical Engineering</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Laboratory Experimental Techniques<br>
+              • Failure Analysis Prevention<br>
+              • Microstructural Transformation in MAterials<br>
+              • Machine Design<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">January 2019 - March 2024</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Mathematics Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.craftonhills.edu/current-students/tutoring-center/science-tutoring.php">Crafton Hills College</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
+            • Coached students encountering difficulty in Mathematics to acheive success<br>
+            • Gave 1:1 in person instruction to students to help the aquire greater knowledge in mathematics<br>
             • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Led daily sessions on 15+ students in time management, note-taking and study skills<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2014 - May 2018</span>
           </div>
         </div>
 
@@ -151,36 +153,29 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">University of California Riverside</h3>
+            <div class="subheading mb-3">Mechanical Engineering</div>
+            <div>B.S in Mechanical Engineering</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">January 2019 - March 2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Crafton Hills College</h3>
+            <div class="subheading mb-3"></div>
+            <div>Associate of Arst - Mathematics</div>
+            <div>Associate of Science - Physics</div>
+            <div>Associate of Science - Multiple Sciences</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">May 2018</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
+
 
       </div>
     </section>
@@ -191,7 +186,11 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/tadano.jpg" width="500px">
+            <img src="img/carbfan.jpg" width="500px"><br>
+            <img src="img/lastbeamup.jpg" width="500px">
+            <img src="img/campingtrip.jpg" width="500px"><br>
+            <img src="img/gradcap.jpg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +198,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Zurisaddai Verdin</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
